--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>Sobre Nós</p>
     </a>
         
-    <a href="https://jovensemautanos.my.canva.site/acesse-sobre-nos" class="link">
+    <a href="https://www.instagram.com/jovens.emautanos" class="link">
         <p>Instagram</p>
     </a>
 
@@ -36,4 +36,5 @@
     </div>
     
 </body>
+
 </html>
